--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,6 @@
     <string name="cancelar">Cancelar</string>
     <string name="oops_houve_uma_falha_ao_salvar_a_atividade">Oops... Houve uma falha ao salvar a atividade.</string>
     <string name="excluir_atividade"><u>Excluir atividade</u></string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
